🛫 Fix z-index; Don't use `vh` on text sizing.

--- a/react-app/src/pages/dashboard/dashboard.css
+++ b/react-app/src/pages/dashboard/dashboard.css
@@ -53,7 +53,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  z-index: 999;
 }
 
 .dashboard--overview-active-box {
@@ -62,7 +61,7 @@
   justify-content: center;
   align-items: center;
   width: 30vw;
-  height: 5vh;
+  height: 3rem;
   background-color: #f5f5f5;
   margin-bottom: 1rem;
 
@@ -75,7 +74,7 @@
   border: none;
   background-color: #f5f5f5;
   color: #14213d;
-  font-size: 1.5vw;
+  font-size: 1.5rem;
   font-weight: 500;
   display: flex;
   flex-direction: column;
@@ -135,19 +134,18 @@
 }
 
 .dashboard--button {
-  height: 10vw;
+  height: 9rem;
   width: 12vw;
-  font-size: 1.5vw;
+  font-size: 1.5rem;
   font-weight: 500;
   background-color: #007bff;
-  border: none;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 2rem;
   color: #fff; /* Set font color to white */
-  margin-top: 0rem;
+  margin-top: 0;
   border-radius: 2px;
 
   transition: background-color 0.3s ease-in-out;
@@ -166,14 +164,13 @@
   font-size: 1rem;
   font-weight: 500;
   background-color: #007bff;
-  border: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 0.5rem;
   color: #fff;
-  margin-top: 0rem;
+  margin-top: 0;
   width: 10rem;
   border-radius: 2px;
 
@@ -196,7 +193,7 @@
 }
 
 .dashboard--button div {
-  padding: 0.5vh;
+  padding: 0.25rem;
 }
 
 .dashboard--img {
@@ -239,7 +236,6 @@
 .dashboard--question--table {
   width: 100%;
   background-color: #f5f5f5;
-  border: 2px solid #f5f5f5;
   border-radius: 2px;
 
   overflow-x: auto; /* Enable horizontal scrolling on smaller screens */
@@ -432,7 +428,7 @@
 }
 
 .material-symbols-outlined {
-  font-family: "Material Symbols Outlined";
+  font-family: "Material Symbols Outlined", sans-serif;
   font-size: 24px;
 }
 
@@ -448,7 +444,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: left;
+  align-items: start;
   height: auto;
   width: 100%;
   padding: 2rem 2rem 3rem 2rem;
